Fri Jan 15 10:45:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	src/NSObjCRuntime.m: Added GSGetInstanceVariable() and
	GSSetInstanceVariable() methods - extensions to gnustep.
	src/NSObjCRuntime.h: ditto

Tue Jan 12  4:10:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* src/NSProcessInfo.m: Fix for GNU/Linux-powerpc (__PPC__) to get
	class initialised with argument info.
	* src/include/fake-main.h: ditto

Mon Jan 11 16:45:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

        Fixes for bugs reported by Benhur-de-Oliveira.Stein@imag.fr
        * src/NSDictionary.m: ([-initWithObjectsAndKeys:]) fixed test for nil.
        * src/NSSet.m: Added makeObjectsPerformSelector methods.
        * src/NSString.m: ([-rangeOfComposedCharacterSequenceAtIndex:]) find
        range from before the index if necessary.
        * Tidied allocation methods in NSArray.m NSDictionary.m

Sat Jan  8  6:00:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

        * src/NSPortNameServer.m: Raise exception on failure to register name.

Fri Jan  8  9:20:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

        * src/NSObject.m: Cache a few more classes.
        * src/include/fast.x: Add a few more classes to cache.
        * checks/benchmark.m: Benchmark classname lookup overhead.
        * src/Makefile.postamble: Improve dependencies.

Wed Jan  6 22:05:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

        * src/UnixFileHandle.m: Fixed error in last change to ([-closeFile])
        which could fail to remove descriptors from runloop properly.

Wed Jan  6 10:30:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

        * mframe/alpha/linux-gnu: First rough attempt at making a config
        file for the DEC alpha.
        * mframe/alpha/gneric: ditto.

Tue Jan  5 20:30:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

        * configure.in: New stuff for making byte-order and type-size